--- a/style.css
+++ b/style.css
@@ -1,28 +1,166 @@
+/* -- RESET -- */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
+/* --GÉNÉRAL -- */
 body {
-    background-size: 100%;
-    background-image: url(./images/backgroung-image.png);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
+  border: none;
+  background-attachment: fixed;
+  background-image: url(./images/backgroung-image.png);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  display: flex;
+  height: 100%;
+  justify-content: center;
 }
 
 #container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 51%;
+  padding-left: 150px;
+  width: 65%;
 }
 
+
+/* -- LOGO & NAV -- */
 .logo {
-    width: 30%;
-    height: auto;
-    object-fit: contain;
+  height: auto;
+  margin-top: 30px;
+  margin-left: -50px;
+  object-fit: contain;
+  width: 30%;
+}
+  
+.nav.nav-tabs.navbar-primary .nav-link,
+.nav.nav-tabs.navbar-primary .nav-link.active,
+.nav.nav-tabs.navbar-primary .nav-link.active:focus,
+.nav.nav-tabs.navbar-primary .nav-link.active:hover,
+.dropdown,
+.dropdown-item {
+  background-color: #0069d9;
+  border-color: #0062cc;
+  color: #fff;
 }
 
+.nav {
+    margin-top: 20px;
+    margin-bottom: 45px;
+    width: 900px;
+}
+
+.nav-item {
+    margin-right: 2px;
+}
+
+.tab-rad {
+    border-radius: 4px;
+}
+
+
+/* -- VIGNETTES JEUX -- */
+.card {
+  height: 500px;
+  margin-left: 25px;
+  width: 17rem;
+}
+
+#game-image {
+  height: 350px;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+#game-titre {
+  border-style: none;
+  color: black;
+  font-size: 18px;
+  margin-top: 10px;
+  padding-left: 14px;
+  padding-right: 20px;
+}
+
+#prix {
+  border-style: none;
+  color: black;
+  font-size: 14px;
+  padding-left: 14px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.btn {
+  margin-left: 10px;
+  margin-bottom: 10px;
+  width: 105px;
+}
+
+.btn:hover {
+  background-color: whitesmoke;
+  border: 1px solid #0069d9;
+  color: #0069d9;
+  width: 105px;
+}
+
+.voir-details {
+  width: 105px;
+}
+
+
+/* -- Plaquette détails -- */
+.img-div {
+  padding-top: 20px;
+  padding-left: 15px;
+}
+
+.img-fluid {
+  width: 307px;
+  min-height: 435px;
+}
+
+.details-titre {
+  color: #0069d9;
+}
+
+.date-fr,
+.detail-note {
+  width: 100px;
+  color: #0069d9;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.pegi-cont {
+  margin-top: 30px;
+}
+
+.img-pegi {
+  border: 2px solid #dbedff;
+  border-radius: 15%;
+  height: 52px;
+  padding: 4px;
+  width: 52px;
+}
+
+.age-plus {
+  margin-left: 6px;
+  margin-top: 14px;
+}
+
+.notes {
+  margin-left: 75px;
+  margin-top: 30px;
+}
+
+.details-description {
+  margin-top: 20px;
+}
+
+i {
+  color: orange;
+}
